--- a/pacifica-hazards-map.html
+++ b/pacifica-hazards-map.html
@@ -129,7 +129,7 @@
                 'data': data
               },
               'paint': {
-                'circle-radius': 5,
+                'circle-radius': 15,
                 'circle-color': "purple"
               }
             });
@@ -143,7 +143,12 @@
               //set popup text
               //You can adjust the values of the popup to match the headers of your CSV.
               // For example: e.features[0].properties.Name is retrieving information from the field Name in the original CSV.
-              var description = `<h3>` + e.features[0].properties.Name + `</h3>` + `<h4>` + `<b>` + `Address: ` + `</b>` + e.features[0].properties.Address + `</h4>` + `<h4>` + `<b>` + `Phone: ` + `</b>` + e.features[0].properties.Phone + `</h4>`;
+              var description = `<h3>` + e.features[0].properties.Name + `</h3>` + `<h4>` + `<b>` + 
+                  `Address: ` + `</b>` + e.features[0].properties.Address + `</h4>` + `<h4>` + `<b>` + 
+                  `Date: ` + `</b>` + e.features[0].properties.Date + `</h4>` +
+                  `Has this occured more than once? ` + `</b>` + e.features[0].properties.Frequency + `</h4>` + 
+                  `Description: ` + `</b>` + e.features[0].properties.Description + `</h4>` +
+                  `Photos : ` + `</b>` + e.features[0].properties.Photos + `</h4>`;
 
               // Ensure that if the map is zoomed out such that multiple
               // copies of the feature are visible, the popup appears
