--- a/pacifica-hazards-map.html
+++ b/pacifica-hazards-map.html
@@ -37,6 +37,8 @@
       font: 400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
       padding: 0;
       width: 400px;
+      max-height: 400px;
+      overflow-y: scroll;
     }
 
     .mapboxgl-popup-content-wrapper {
@@ -83,11 +85,11 @@
 
     var hazardTypes = [
       {iconName: 'cliff', iconPath: './icons8-cliff-100.png', hazardName: 'Coastal cliff failure'},
-      {iconName: 'fire', iconPath: './icons8-fires-100.png', hazardName: 'Fire'},
+      {iconName: 'fire', iconPath: './icons8-fire-90.png', hazardName: 'Fire'},
       {iconName: 'erosion', iconPath: './icons8-landslide-100.png', hazardName: 'Erosion'},
       {iconName: 'wave', iconPath: './icons8-ocean-wave-100.png', hazardName: 'Coastal flooding (from the ocean)'},
       {iconName: 'landslide', iconPath: './icons8-avalanche-100.png', hazardName: 'Landslide'},
-      {iconName: 'flood', iconPath: './icons8-floods-100.png', hazardName: 'Inland flooding (from storm events)'}
+      {iconName: 'flood', iconPath: './icons8-water-100.png', hazardName: 'Inland flooding (from storm events)'}
     ]
 
     var transformRequest = (url, resourceType) => {
@@ -166,7 +168,6 @@
                 //set popup text
                 //You can adjust the values of the popup to match the headers of your CSV.
                 // For example: e.features[0].properties.Name is retrieving information from the field Name in the original CSV.
-                const photo = e.features[0].properties['Please upload any photos or videos you\'d like to share from the event.']
                 const address = e.features[0].properties['Please write the address in the form " XXX Street, Pacifica CA 940XX" ']
                 const gpsLat = Math.round(e.features[0].geometry.coordinates[1]*10000)/10000
                 const gpsLon = Math.round(e.features[0].geometry.coordinates[0]*10000)/10000
@@ -176,40 +177,44 @@
                 const person = e.features[0].properties['What is your name? (optional)']
                 const cityWork = e.features[0].properties['Did the city undertake any work or repairs after the event? If so, please describe.']
                 const legal = e.features[0].properties['Were there any legal challenges or financial settlements that resulted from this event? ']
+                const photos = e.features[0].properties['Please upload any photos or videos you\'d like to share from the event.']
 
-                var description = `<h3>`
+                var description = `<h3>` + escape(e.features[0].properties['What type of hazard was this?']) + `</h3>` + `<h4>`
                   if (address) {
-                    description += address + `</h3>` + `<h4>` + `<b>`
+                    description += `<b>` + 'Location: ' + `</b>`+ escape(address) + `</h4>` + `<h4>`
                   } else {
-                    description += gpsLat + ' N, ' + gpsLon + ' E' + `</h3>` + `<h4>` + `<b>`
+                    description += escape(gpsLat) + ' N, ' + escape(gpsLon) + ' E' + `</h4>` + `<h4>`
                   }
                   if (date) {
-                    description += `Date: ` + `</b>` + date + `</h4>` + `<h4>` + `<b>`
+                    description += `<b>` + `Date: ` + `</b>` + escape(date) + `</h4>` + `<h4>`
                   }
                   if (frequency) {
-                    description += `Has this occured more than once? ` + `</b>` + frequency + `</h4>` + `<h4>` + `<b>` 
+                    description += `<b>` + `Has this occured more than once? ` + `</b>` + escape(frequency) + `</h4>` + `<h4>`
                   }
                   if (describe) {
-                    description += `Description: ` + `</b>` + describe + `</h4>` + `<h4>` + `<b>` 
+                    description += `<b>` + `Description: ` + `</b>` + escape(describe) + `</h4>` + `<h4>`
                   }
                   if (cityWork) {
-                    description += `City repairs? ` + `</b>` + cityWork + `</h4>` + `<h4>` + `<b>` 
+                    description += `<b>` + `City repairs? ` + `</b>` + escape(cityWork) + `</h4>` + `<h4>`
                   }
                   if (legal) {
-                    description += `Legal cases? ` + `</b>` + legal + `</h4>` + `<h4>` + `<b>` 
+                    description += `<b>` + `Legal cases? ` + `</b>` + escape(legal) + `</h4>` + `<h4>` 
                   }
-                      if (photo) {  
-                        description += `
-                          <h4>
-                            <b>Photos:</b>
-                            ${escape(photo)}
-                          </h4>
-                          <iframe
-                            src="https://drive.google.com/file/d/${new URLSearchParams(photo.split('?')[1]).get('id')}/preview"
-                            allow="autoplay"
-                            style="width: 100%; border: none;"
-                          />
-                        `
+                      if (photos) {  
+                        for (const photo of photos.split(', ')) {
+                          console.log(photo)
+                          description += `
+                            <h4>
+                              <b>Photo:</b>
+                              ${escape(photo)}
+                            </h4>
+                            <iframe
+                              src="https://drive.google.com/file/d/${escape(new URLSearchParams(photo.split('?')[1]).get('id'))}/preview"
+                              allow="autoplay"
+                              style="width: 100%; height: 250px; border: none;"
+                            ></iframe>
+                          `
+                        }
                       }
 
                 // Ensure that if the map is zoomed out such that multiple
