change icons folder

--- a/pacifica-hazards-map.html
+++ b/pacifica-hazards-map.html
@@ -84,12 +84,12 @@
   <script>
 
     var hazardTypes = [
-      {iconName: 'cliff', iconPath: './icons8-cliff-100.png', hazardName: 'Coastal cliff failure'},
-      {iconName: 'fire', iconPath: './icons8-fire-90.png', hazardName: 'Fire'},
-      {iconName: 'erosion', iconPath: './icons8-landslide-100.png', hazardName: 'Erosion'},
-      {iconName: 'wave', iconPath: './icons8-ocean-wave-100.png', hazardName: 'Coastal flooding (from the ocean)'},
-      {iconName: 'landslide', iconPath: './icons8-avalanche-100.png', hazardName: 'Landslide'},
-      {iconName: 'flood', iconPath: './icons8-water-100.png', hazardName: 'Inland flooding (from storm events)'}
+      {iconName: 'cliff', iconPath: './hazard-icons/icons8-cliff-100.png', hazardName: 'Coastal cliff failure'},
+      {iconName: 'fire', iconPath: './hazard-icons/icons8-fire-90.png', hazardName: 'Fire'},
+      {iconName: 'erosion', iconPath: './hazard-icons/icons8-landslide-100.png', hazardName: 'Erosion'},
+      {iconName: 'wave', iconPath: './hazard-icons/icons8-ocean-wave-100.png', hazardName: 'Coastal flooding (from the ocean)'},
+      {iconName: 'landslide', iconPath: './hazard-icons/icons8-avalanche-100.png', hazardName: 'Landslide'},
+      {iconName: 'flood', iconPath: './hazard-icons/icons8-water-100.png', hazardName: 'Inland flooding (from storm events)'}
     ]
 
     var transformRequest = (url, resourceType) => {
