--- a/pacifica-hazards-map.html
+++ b/pacifica-hazards-map.html
@@ -5,10 +5,8 @@
   <meta charset='utf-8' />
   <title></title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css' rel='stylesheet' />
-  <script src='https://npmcdn.com/csv2geojson@latest/csv2geojson.js'></script>
   <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
   <style>
     body {
@@ -82,11 +80,9 @@
 
   <div id='map'></div>
   <script>
+    const featuresURL = "https://script.google.com/macros/s/AKfycbw7yDrm3JF73_FFOvNmD8LeC9l5EGJXPq9rYOxsaKgp8Ii7NxFKdlfR_q5f-fLWSZzAbg/exec";
 
-
-
-
-    var knownHazardTypes = {
+    const knownHazardTypes = {
       cliff: 'Coastal cliff failure',
       fire: 'Fire',
       erosion: 'Erosion',
@@ -96,19 +92,15 @@
       sinkhole: 'Sinkhole'
     }
 
-    function getHazardType(feature) {
-      return feature.properties['What type of hazard was this?'];
-    }
-
     function knownHazardFilterBuilder(hazardType) {
-      return feature => getHazardType(feature) == hazardType
+      return feature => feature.properties.type == hazardType
     }
 
     function unknownHazardFilter(feature) {
       let known = false;
       for (const hazardType of Object.values(knownHazardTypes)) {
         console.log(hazardType)
-        known = known || getHazardType(feature) == hazardType;
+        known = known || feature.properties.type == hazardType;
       }
       return !known;
     }
@@ -149,7 +141,7 @@
 
     // // add city boundaries
     // map.on('load', function () {
-  
+
     //   map.addSource('pacifica', {
     //     type: 'vector',
     //     url: './PacificaBoundaries/PacificaBoundaries.shp'
@@ -175,137 +167,124 @@
         map.addImage(iconName, image)
       })
     }
-  
-    $(document).ready(function () {
-      $.ajax({
-        type: "GET",
-        //YOUR TURN: Replace with csv export link
-        url: 'https://docs.google.com/spreadsheets/d/1l5rXCSrE_76fg23BTW3ktCCoE2LF76vPEEEgtEhWkfE/gviz/tq?tqx=out:csv&sheet=Sheet1',
-        dataType: "text",
-        success: function (csvData) { makeGeoJSON(csvData); }
+
+    // Fetch features and wait for map load concurrently
+    const features_promise = (async () => JSON.parse(await (await fetch(featuresURL)).text()))();
+    map.on('load', async () => {
+      console.log("Fetching features...")
+      const features = await features_promise;
+
+      console.log("Adding map layers...")
+      for (const {iconName, hazardName, filter: layerFilter} of hazardLayers) {
+        //Add the the layer to the map
+        map.addLayer({
+          'id': iconName,
+          'type': 'symbol',
+          'layout': {
+            'icon-image': iconName,
+            'icon-size': 0.25,
+            'icon-anchor': 'bottom',
+            'icon-allow-overlap': true
+          },
+          'source': {
+            'type': 'geojson',
+            'data': {
+              type: "FeatureCollection",
+              features: features.filter(layerFilter)
+            }
+          }
+        })
+
+        // When a click event occurs on a feature in the csvData layer, open a popup at the
+        // location of the feature, with description HTML from its properties.
+        map.on('click', iconName, function (e) {
+
+          const feature = e.features[0];
+          const coordinates = feature.geometry.coordinates;
+          const { type, description: featureDescription, address, date, frequency, city_repairs: cityRepairs, legal, photos } = feature.properties;
+
+          // var coordinates = feature.geometry.coordinates.slice();
+          //set popup text
+          //You can adjust the values of the popup to match the headers of your CSV.
+          // For example: e.features[0].properties.Name is retrieving information from the field Name in the original CSV.
+          // const address = e.features[0].properties['Please write the address in the form " XXX Street, Pacifica CA 940XX" ']
+          // const gpsLat = Math.round(e.features[0].geometry.coordinates[1] * 10000) / 10000
+          // const gpsLon = Math.round(e.features[0].geometry.coordinates[0] * 10000) / 10000
+          // const date = e.features[0].properties['When did this event occur? (Approximate dates or years are okay)']
+          // const frequency = e.features[0].properties['If yes, approximately how many times?']
+          // const describe = e.features[0].properties['Please describe what happened.']
+          // const person = e.features[0].properties['What is your name? (optional)']
+          // const cityWork = e.features[0].properties['Did the city undertake any work or repairs after the event? If so, please describe.']
+          // const legal = e.features[0].properties['Were there any legal challenges or financial settlements that resulted from this event? ']
+          // const photos = e.features[0].properties['Please upload any photos or videos you\'d like to share from the event.']
+
+          var description = `<h3>` + escape(type) + `</h3>` + `<h4>`
+          if (address) {
+            description += `<b>` + 'Location: ' + `</b>` + escape(address) + `</h4>` + `<h4>`
+          } else {
+            description += escape(coordinates[1]) + ' N, ' + escape(coordinates[0]) + ' E' + `</h4>` + `<h4>`
+          }
+          if (date) {
+            description += `<b>` + `Date: ` + `</b>` + escape(date) + `</h4>` + `<h4>`
+          }
+          if (frequency) {
+            description += `<b>` + `Has this occured more than once? ` + `</b>` + escape(frequency) + `</h4>` + `<h4>`
+          }
+          if (featureDescription) {
+            description += `<b>` + `Description: ` + `</b>` + escape(featureDescription) + `</h4>` + `<h4>`
+          }
+          if (cityRepairs) {
+            description += `<b>` + `City repairs? ` + `</b>` + escape(cityRepairs) + `</h4>` + `<h4>`
+          }
+          if (legal) {
+            description += `<b>` + `Legal cases? ` + `</b>` + escape(legal) + `</h4>` + `<h4>`
+          }
+          if (photos) {
+            for (const photo of photos.split(', ')) {
+              console.log(photo)
+              description += `
+                      <h4>
+                        <b>Photo:</b>
+                        ${escape(photo)}
+                      </h4>
+                      <iframe
+                        src="https://drive.google.com/file/d/${escape(new URLSearchParams(photo.split('?')[1]).get('id'))}/preview"
+                        allow="autoplay"
+                        style="width: 100%; height: 250px; border: none;"
+                      ></iframe>
+                    `
+            }
+          }
+
+          // Ensure that if the map is zoomed out such that multiple
+          // copies of the feature are visible, the popup appears
+          // over the copy being pointed to.
+          while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
+            coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
+          }
+
+          //add Popup to map
+
+          new mapboxgl.Popup({anchor: 'top'})
+            .setLngLat(coordinates)
+            .setHTML(description)
+            .addTo(map);
+        });
+      }
+
+
+      // Change the cursor to a pointer when the mouse is over the places layer.
+      map.on('mouseenter', 'csvData', function () {
+        map.getCanvas().style.cursor = 'pointer';
       });
 
+      // Change it back to a pointer when it leaves.
+      map.on('mouseleave', 'places', function () {
+        map.getCanvas().style.cursor = '';
+      });
 
-      function makeGeoJSON(csvData) {
-        csv2geojson.csv2geojson(csvData, {
-          latfield: 'Latitude',
-          lonfield: 'Longitude',
-          delimiter: ','
-        }, function (err, data) {
-          console.log(data.features)
-          map.on('load', function () {
-
-            for (const {iconName, hazardName, filter} of hazardLayers) {
-              //Add the the layer to the map
-              map.addLayer({
-                'id': iconName,
-                'type': 'symbol',
-                'layout': {
-                  'icon-image': iconName,
-                  'icon-size': 0.25,
-                  'icon-anchor': 'bottom',
-                  'icon-allow-overlap': true
-                },
-                'source': {
-                  'type': 'geojson',
-                  'data': {
-                    type: "FeatureCollection",
-                    features: data.features.filter(feature => filter(feature))
-                  }
-                }
-              })
-
-              // When a click event occurs on a feature in the csvData layer, open a popup at the
-              // location of the feature, with description HTML from its properties.
-              map.on('click', iconName, function (e) {
-
-                var coordinates = e.features[0].geometry.coordinates.slice();
-                //set popup text
-                //You can adjust the values of the popup to match the headers of your CSV.
-                // For example: e.features[0].properties.Name is retrieving information from the field Name in the original CSV.
-                const address = e.features[0].properties['Please write the address in the form " XXX Street, Pacifica CA 940XX" ']
-                const gpsLat = Math.round(e.features[0].geometry.coordinates[1]*10000)/10000
-                const gpsLon = Math.round(e.features[0].geometry.coordinates[0]*10000)/10000
-                const date = e.features[0].properties['When did this event occur? (Approximate dates or years are okay)']
-                const frequency = e.features[0].properties['If yes, approximately how many times?']
-                const describe = e.features[0].properties['Please describe what happened.']
-                const person = e.features[0].properties['What is your name? (optional)']
-                const cityWork = e.features[0].properties['Did the city undertake any work or repairs after the event? If so, please describe.']
-                const legal = e.features[0].properties['Were there any legal challenges or financial settlements that resulted from this event? ']
-                const photos = e.features[0].properties['Please upload any photos or videos you\'d like to share from the event.']
-
-                var description = `<h3>` + escape(e.features[0].properties['What type of hazard was this?']) + `</h3>` + `<h4>`
-                  if (address) {
-                    description += `<b>` + 'Location: ' + `</b>`+ escape(address) + `</h4>` + `<h4>`
-                  } else {
-                    description += escape(gpsLat) + ' N, ' + escape(gpsLon) + ' E' + `</h4>` + `<h4>`
-                  }
-                  if (date) {
-                    description += `<b>` + `Date: ` + `</b>` + escape(date) + `</h4>` + `<h4>`
-                  }
-                  if (frequency) {
-                    description += `<b>` + `Has this occured more than once? ` + `</b>` + escape(frequency) + `</h4>` + `<h4>`
-                  }
-                  if (describe) {
-                    description += `<b>` + `Description: ` + `</b>` + escape(describe) + `</h4>` + `<h4>`
-                  }
-                  if (cityWork) {
-                    description += `<b>` + `City repairs? ` + `</b>` + escape(cityWork) + `</h4>` + `<h4>`
-                  }
-                  if (legal) {
-                    description += `<b>` + `Legal cases? ` + `</b>` + escape(legal) + `</h4>` + `<h4>` 
-                  }
-                      if (photos) {  
-                        for (const photo of photos.split(', ')) {
-                          console.log(photo)
-                          description += `
-                            <h4>
-                              <b>Photo:</b>
-                              ${escape(photo)}
-                            </h4>
-                            <iframe
-                              src="https://drive.google.com/file/d/${escape(new URLSearchParams(photo.split('?')[1]).get('id'))}/preview"
-                              allow="autoplay"
-                              style="width: 100%; height: 250px; border: none;"
-                            ></iframe>
-                          `
-                        }
-                      }
-
-                // Ensure that if the map is zoomed out such that multiple
-                // copies of the feature are visible, the popup appears
-                // over the copy being pointed to.
-                while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-                  coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
-                }
-
-                //add Popup to map
-
-                new mapboxgl.Popup({anchor: 'top'})
-                  .setLngLat(coordinates)
-                  .setHTML(description)
-                  .addTo(map);
-              });
-            }
-
-
-            // Change the cursor to a pointer when the mouse is over the places layer.
-            map.on('mouseenter', 'csvData', function () {
-              map.getCanvas().style.cursor = 'pointer';
-            });
-
-            // Change it back to a pointer when it leaves.
-            map.on('mouseleave', 'places', function () {
-              map.getCanvas().style.cursor = '';
-            });
-
-            var bbox = turf.bbox(data);
-            map.fitBounds(bbox, { padding: 50 });
-
-          });
-
-        });
-      };
+      var bbox = turf.bbox({ type: "FeatureCollection", features });
+      map.fitBounds(bbox, { padding: 50 });
     });
 
 
